--- a/LSH/README
+++ b/LSH/README
@@ -1,1 +1,1 @@
-έχω υλοποιήση shingling, και με το id, μένει μόνο το τελευταίο βήμα με lsh.
+έχω υλοποιήσει shingling, και με το id, μένει μόνο το τελευταίο βήμα με lsh.
